[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprits/Default.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Bullet" type="Area2D"]
rotation = 1.5708
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.15, 0.35 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.87451, 0.309804, 1 )
scale = Vector2( 0.2, 0.4 )
texture = ExtResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
